# BookCMS

./: .gitignore  Dockerfile  README.md  TOC.md  bookshelf_data.json  cert.crt  cert.key  ch.txt  checklist.md  commands.md  db.sqlite3  do.sh  docker-compose.yml  e.txt  main.py  pyproject.toml  requirements.txt
accounts/: admin.py  apps.py  backend.py  forms.py  models.py  pipeline.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: login.html  logout.html  profile.html  profile_edit.html  register.html  register_confirm.html  register_done.html
accounts/templates/accounts/email/: verification_email.txt
accounts/templates/registration/: password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
bookshelf/: settings.py  urls.py
catalog/: admin.py  feeds.py  forms.py  models.py  sitemap.py  urls.py  views.py
catalog/fixtures/: book_fixture.json
catalog/migrations/: 0001_initial.py  0002_alter_book_slug.py  0003_alter_book_slug_review.py  0004_book_tags.py  0005_trigram_ext.py
catalog/templates/: 404.html  pagination.html
catalog/templates/catalog/: base.html
catalog/templates/catalog/book/: detail.html  latest_books.html  list.html  review.html  search.html  share.html  tag_list.html
catalog/templates/catalog/book/includes/: review_form.html
catalog/templatetags/: catalog_tags.py
