[project]
name = "bookcms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
ependencies = [
    "asgiref==3.11.1",
    "django==6.0.5",
    "sqlparse==0.5.5",
    "python-decouple==3.8",
    "ipython==9.11.0",
    "django-taggit==6.1.0",
    "markdown==3.10.2",
    "psycopg-binary==3.2.11",
]
[project]